--- a/src/main/resources/templates/usuario/detalleorden.html
+++ b/src/main/resources/templates/usuario/detalleorden.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="orden__button">
-                    <a href="" class="orden__a">Generar detalla orden</a>
+                    <a th:href="@{/saveOrder}" class="orden__a">Generar detalla orden</a>
                 </div>
 
             </div>
