--- a/src/main/resources/static/css/carrito.css
+++ b/src/main/resources/static/css/carrito.css
@@ -331,6 +331,76 @@ ul{
 
 }
 
+/* ==================================   CONFIRMAR =============================================== */
+
+.noscroll{
+    overflow: hidden;
+}
+
+.confirmar{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0, .5);
+    z-index: 9999;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmarshow{
+    display: flex;
+}
+
+.confirmar__content{
+    width: 600px;
+    background-color: #fff;
+    padding: 3.5rem 2.5rem;
+    border-radius: 1rem;
+}
+
+.confirmar__title{
+    width: max-content;
+    margin: auto;
+    border-bottom: 3px solid var(--first-color-alt);
+    padding-inline: 2rem;
+    margin-bottom: 2.5rem;
+}
+
+.confirmar__pregunta{
+    color: var(--first-color-alt);
+    padding-bottom: 1.5rem;
+    font-weight: 600;
+}
+
+.confirmar__buttons{
+    display: flex;
+    justify-content: space-between;
+}
+
+.confirmar__button{
+    padding: 1rem 2.5rem;
+    border-radius: 1rem;
+}
+
+.confirmar__button:hover{
+    opacity: .5;
+}
+
+
+
+.confirmar__compra{
+    background-color: var(--first-color-alt);
+    color: #fff;
+
+}
+
+.confirmar__cancelar{
+    border: 2px solid var(--first-color-alt);
+    color: var(--first-color-alt);
+}
+
 
 /*
 ================================================
