mostrar las ordenes del usuario

--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -180,7 +180,7 @@
                     </li>
 
                     <li class="nav__despegable--item">
-                        <a class="nav__despegable--link" href="#">Mis compras</a>
+                        <a class="nav__despegable--link" th:href="@{/usuario/compras}">Mis compras</a>
                     </li>
 
                     <li class="nav__despegable--item">
