Agragacion de la dependencia apache poi, funcionalidad de las clases

--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="orden__button">
-                    <a th:href="@{/saveOrder}" class="orden__a">Generar detalla orden</a>
+                    <a th:href="@{/excel/downloadExcel/{ordenId} (ordenId=${id})}" class="orden__a">Generar detalle de la compra</a>
                 </div>
 
             </div>
