Funcionalidad para el guardado de imagenes con Apache commons

--- a/src/main/resources/templates/producto/crear.html
+++ b/src/main/resources/templates/producto/crear.html
@@ -65,7 +65,7 @@
         
                         <div class="formularios__item">
                             <label class="formularios__label">IMG</label>
-                            <input class="formularios__input" type="file" id="image" name="image">
+                            <input class="formularios__input" type="file" id="image" name="image" accept="image/png, image/jpeg, image/jpg" >
                         </div>
                     </div>
 
