--- a/src/main/resources/templates/producto/edit.html
+++ b/src/main/resources/templates/producto/edit.html
@@ -54,7 +54,7 @@
         
                         <div class="formularios__item">
                             <label class="formularios__label">IMG</label>
-                            <input class="formularios__input" type="file" name="image" th:value="${p.img}">
+                            <input class="formularios__input" type="file" name="image" th:value="${p.img}" accept="image/png, image/jpeg, image/jpg" >
                         </div>
                     </div>
 
